# repro-floor-atlas

./: .gitignore  E156-PROTOCOL.md  LICENSE  README.md  baseline.json  push.sh  pyproject.toml  requirements.txt
docs/: index.html
docs/superpowers/plans/: 2026-04-15-reproduction-floor-atlas.md
docs/superpowers/specs/: 2026-04-15-reproduction-floor-atlas-design.md
e156-submission/: e156_paper.md
scripts/: prereq_check.py  run_atlas.py  seed_smoke_baseline.py
src/repro_floor_atlas/: __init__.py  _metaaudit_path.py  atlas.py  classifier.py  loader.py  precision_floor.py  report.py
tests/: conftest.py  test_atlas.py  test_classifier.py  test_integration_metaaudit_contract.py  test_loader.py  test_precision_floor.py  test_regression.py  test_report.py
tests/fixtures/: smoke_10_mas.json
